--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <h1><span>P</span>oker <span>P</span>ayout <span>C</span>alculator</h1>
         <hr>
     </head>
+
+    <script>
+        function test() {
+            console.log("HI WORLD")
+        }
+    </script>
     <body>
         <div class="main">
             <!--inputs section-->
@@ -64,7 +70,7 @@
                     </ul><br>
             
                     
-                    <input type="submit" class="btn" value="Submit" onclick="test()">
+                    <button type="button" class="btn" onclick="test()">Submit</button>
                 </form>
             </div>
             <div class="result">
