--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
         <title>Poker Payout Calculator</title>
         <link rel="stylesheet" href="style.css">
         <script src="myScript.js"></script>
-        <h1><span>P</span>oker <span>P</span>ayout <span>C</span>alculator</h1>
-        <hr>
+        <h1><span>P</span>oker <span>P</span>ayout <span>P</span>ro</h1>
     </head>
 
-    <script>
-        function test() {
-            console.log("HI WORLD")
-        }
-    </script>
+
     <body>
         <div class="main">
             <!--inputs section-->
@@ -22,60 +17,61 @@
                 <form>
                     <label for="player1" class="info">Player 1:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p1name" name="p1name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p1name" name="p1name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p1total" name="p1total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p1worth" name="p1worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player2" class="info">Player 2:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p2name" name="p2name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p2name" name="p2name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p2total" name="p2total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p2worth" name="p2worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player3" class="info">Player 3:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p3name" name="p3name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p3name" name="p3name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p3total" name="p3total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p3worth" name="p3worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player4" class="info">Player 4:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p4name" name="p4name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p4name" name="p4name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p4total" name="p4total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p4worth" name="p4worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player5" class="info">Player 5:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p5name" name="p5name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p5name" name="p5name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p5total" name="p5total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p5worth" name="p5worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player6" class="info">Player 6:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p6name" name="p6name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p6name" name="p6name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p6total" name="p6total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p6worth" name="p6worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player7" class="info">Player 7:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p7name" name="p7name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p7name" name="p7name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p7total" name="p7total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p7worth" name="p7worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul>
                     <label for="player8" class="info">Player 8:</label>
                     <ul>
-                        <li><input type="text" class="name" id="p8name" name="p8name" size="40" placeholder="insert 'dick' if no player"></li>
+                        <li><input type="text" class="name" id="p8name" name="p8name" size="40" placeholder="Enter 'none' if no player"></li>
                         <li><input type="text" class="total" id="p8total" name="p8total" size="25" placeholder="Enter total buy in"></li>
                         <li><input type="text" class="worth" id="p8worth" name="p8worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul><br>
             
                     
-                    <button type="button" class="btn" onclick="test()">Submit</button>
+                    <button type="button" class="btn" onclick="calculate()">Submit</button>
                 </form>
             </div>
             <div class="result">
                 <h3>Transactions</h3>
                 <div>
+                    <p>fff</p>
                 </div>
             </div>
         </div>
