--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     
                 </form>
             </div>
+            <div class="summary">
+                <h3>Summary</h3>
+            </div>
             <div class="result">
                 <h3>Transactions</h3>
                 <div>
