--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="poker calculator">
         <title>Poker Payout Calculator</title>
         <link rel="stylesheet" href="style.css">
-        <script src="myScript.js"></script>
+        <script src="test.js"></script>
         <h1><span>P</span>oker <span>P</span>ayout <span>P</span>ro</h1>
     </head>
 
@@ -66,7 +66,7 @@
                         <li><input type="text" class="worth" id="p8worth" name="p8worth" size="25" placeholder="Enter current chip amount"></li>
                     </ul><br>
             
-                    <button type="button" class="btn" onclick="calculate()">Submit</button>
+                    <button type="button" class="btn" onclick="main()">Submit</button>
                     
                 </form>
             </div>
