--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Poker Payout Calculator</title>
         <link rel="stylesheet" href="style.css">
         <script src="test.js"></script>
-        <h1><span>P</span>oker <span>P</span>ayout <span>P</span>ro</h1>
+        <h1>Poker Payout Pro</h1>
     </head>
 
 
