--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
             </div>
             <div class="summary">
                 <h3>Summary</h3>
+                <p id="sum">fffff</p>
             </div>
             <div class="result">
                 <h3>Transactions</h3>
-                <div>
-                    <p>fff</p>
-                </div>
+                <p id="trans">gegegeg</p>
             </div>
             
         </div>
