--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="poker calculator">
         <title>Poker Payout Calculator</title>
         <link rel="stylesheet" href="style.css">
-        <script src="test.js"></script>
+        <script src="poker.js"></script>
         <h1>Poker Payout Pro</h1>
     </head>
 
