--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="poker calculator">
-        <title>Poker Payout Calculator</title>
+        <title>Poker Payout Pro</title>
         <link rel="stylesheet" href="style.css">
         <script src="poker.js"></script>
         <h1>Poker Payout Pro</h1>
@@ -72,11 +72,11 @@
             </div>
             <div class="summary">
                 <h3>Summary</h3>
-                <p id="sum">fffff</p>
+                <p id="sum" name="summ" value=""></p>
             </div>
             <div class="result">
                 <h3>Transactions</h3>
-                <p id="trans">gegegeg</p>
+                <p id="trans" name="resul" value=""></p>
             </div>
             
         </div>
