--- a/index.html
+++ b/index.html
@@ -17,50 +17,50 @@
                 <div class="header">
                     <ul>
                     <li>Player's Name</li>
-                    <li>Chip Amount</li>
                     <li>Total Buy In</li>
+                    <li>Chip Count</li>
                     </ul>
                 </div>
                 
                 <ul>
                     <li><input type="text" class="name" id="p1name" name="p1name" size="30" placeholder="Enter 'none' if no player"></li>
-                    <li><input type="text" class="worth" id="p1worth" name="p1worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p1total" name="p1total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p1worth" name="p1worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p2name" name="p2name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p2worth" name="p2worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p2total" name="p2total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p2worth" name="p2worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p3name" name="p3name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p3worth" name="p3worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p3total" name="p3total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p3worth" name="p3worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p4name" name="p4name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p4worth" name="p4worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p4total" name="p4total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p4worth" name="p4worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p5name" name="p5name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p5worth" name="p5worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p5total" name="p5total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p5worth" name="p5worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p6name" name="p6name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p6worth" name="p6worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p6total" name="p6total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p6worth" name="p6worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p7name" name="p7name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p7worth" name="p7worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p7total" name="p7total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p7worth" name="p7worth" size="14" placeholder="Final chip amount"></li>
                 </ul>
                 <ul>
                     <li><input type="text" class="name" id="p8name" name="p8name" size="30" placeholder="Enter 'none' if no player"></li>                    
-                    <li><input type="text" class="worth" id="p8worth" name="p8worth" size="14" placeholder="Final chip amount"></li>
                     <li><input type="text" class="total" id="p8total" name="p8total" size="14" placeholder="Total buy in"></li>
+                    <li><input type="text" class="worth" id="p8worth" name="p8worth" size="14" placeholder="Final chip amount"></li>
                 </ul><br>
         
                 <button type="button" class="btn" onclick="main()">Submit</button>
